--- a/client/web/include/head_common.html
+++ b/client/web/include/head_common.html
@@ -7,7 +7,8 @@
 
 <style>
   .bi {
-    width: 1em;
-    height: 1em;
+    width: 1.25em;
+    height: 1.25em;
+    transform: translateY(-0.1rem);
   }
 </style>
