try and get browser to connect to websocket

--- a/web/include/scene/media/media_offcanvas.html
+++ b/web/include/scene/media/media_offcanvas.html
@@ -1,4 +1,4 @@
-{{ javascript(scene/media/scene_media.js) }}
+{{ javascript(scene/media/media.js) }}
 <div
 class="offcanvas offcanvas-start"
 tabindex="-2"
