--- a/web/include/scene/game/game_offcanvas.html
+++ b/web/include/scene/game/game_offcanvas.html
@@ -49,6 +49,7 @@ aria-labelledby="game_offcanvas_label"
             <button
               type="button"
               class="btn btn-primary"
+              onclick="new_game();"
             >Launch Game {{ bootstrap_icon(arrow-up-right-square) }}</button>
           </div>
         </div>
