--- a/web/include/scene/game/game_offcanvas.html
+++ b/web/include/scene/game/game_offcanvas.html
@@ -11,39 +11,12 @@
       </button>
   </div>
   <div class="offcanvas-body">
-    <ul class="nav nav-tabs mb-2" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link active"
-          id="launch_game_tab"
-          data-bs-toggle="tab"
-          data-bs-target="#launch_game"
-          type="button"
-          role="tab"
-          aria-controls="launch_game"
-          aria-selected="true"
-        >Launch</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link"
-          id="join_game_tab"
-          data-bs-toggle="tab"
-          data-bs-target="#join_game"
-          type="button"
-          role="tab"
-          aria-controls="join_game"
-          aria-selected="true"
-        >Join</button>
-      </li>
-    </ul>  
+    {{ nav/start() }}
+      {{ nav/item(tab=launch_game, label=Launch, selected=true) }}  
+      {{ nav/item(tab=join_game, label=Join) }}
+    {{ nav/end() }}
     <div class="tab-content">
-      <div
-        class="tab-pane fade show active"
-        id="launch_game"
-        role="tabpanel"
-        aria-labelledby="launch_game_tab"
-      >
+      {{ tab/start(tab=launch_game, selected=true) }}
         <div class="p-2">
           <div class="row py-2">
             <button
@@ -56,13 +29,8 @@
             <p id="launch_game_error" class="form-text text-danger d-none">Error message.</p>
           </div>
         </div>
-      </div>
-      <div
-        class="tab-pane fade show"
-        id="join_game"
-        role="tabpanel"
-        aria-labelledby="join_game_tab"
-      >
+      {{ tab/end() }}
+      {{ tab/start(tab=join_game) }}
         <div class="p-2">
           <form id="join_game_form" class="needs-validation" onsubmit="join_game(); return false;">
             <div class="row py-2">
@@ -91,7 +59,7 @@
             </div>
           </form> 
         </div>
-      </div>
+      {{ tab/end() }}
     </div>
   </div>
 </div>
