--- a/web/include/head_common.html
+++ b/web/include/head_common.html
@@ -4,6 +4,8 @@
 
 <!-- Bootstrap CSS -->
 {{ stylesheet(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css) }}
+{{ stylesheet(common.css) }}
+{{ javascript(common.js) }}
 
 <style>
   .bi {
