--- a/web/include/special/icon_button.html
+++ b/web/include/special/icon_button.html
@@ -8,4 +8,5 @@
     type="button"
     IFDEF(ID) {{ id="{{ ID }}" }}
     IFDEF(ONCLICK) {{ onclick="{{ ONCLICK }}" }}
+    IFDEF(ATTRS) {{ {{ ATTRS }} }}
   >{{ bootstrap_icon({{ ICON }}) }}</button>
