allow deletion of layers

--- a/web/include/scene/layers/layer_list_item.html
+++ b/web/include/scene/layers/layer_list_item.html
@@ -47,6 +47,18 @@
             onclick="RustFuncs.move_layer(${id}, false); load_layers();"
           )
         }}
+        {{
+          icon_button(
+            icon="trash3",
+            outline=1,
+            small=1,
+            onclick="
+              modal_confirm(
+                () => { RustFuncs.remove_layer(${id}); load_layers(); }
+              );
+            "
+          )
+        }}
       |,
       small=1,
       action="title => rename_layer(${id}, title)"
