--- a/web/include/scene/layers/layer_list_item.html
+++ b/web/include/scene/layers/layer_list_item.html
@@ -36,7 +36,7 @@
             icon="chevron-up",
             outline=1,
             small=1,
-            onclick="RustFuncs.move_layer(${id}, true); load_layers();"
+            onclick="RustFuncs.move_layer(${id}, true);"
           )
         }}
         {{
@@ -44,7 +44,7 @@
             icon="chevron-down",
             outline=1,
             small=1,
-            onclick="RustFuncs.move_layer(${id}, false); load_layers();"
+            onclick="RustFuncs.move_layer(${id}, false);"
           )
         }}
         {{
@@ -54,7 +54,7 @@
             small=1,
             onclick="
               modal_confirm(
-                () => { RustFuncs.remove_layer(${id}); load_layers(); }
+                () => { RustFuncs.remove_layer(${id}); }
               );
             "
           )
