--- a/web/include/bootstrap_js.html
+++ b/web/include/bootstrap_js.html
@@ -1,1 +1,1 @@
-{{ javascript(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js) }}
+{{ javascript(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js) }}
