--- a/web/include/scene/layers/canvas_list_item.html
+++ b/web/include/scene/layers/canvas_list_item.html
@@ -4,6 +4,7 @@
     data-id="${layer.id}"
     href="#"
     onclick="
+      hide_sprite_dropdown();
       const sprite_id = parseInt(
         document
           .getElementById('canvas_sprite_dropdown')
