--- a/web/include/scene/layers/canvas_dropdown.html
+++ b/web/include/scene/layers/canvas_dropdown.html
@@ -1,7 +1,7 @@
 <ul
   class="dropdown-menu"
   id="canvas_sprite_dropdown"
-  style="position: absolute; z-index: 1; width: 200px; left: 500px; top: 500px;"
+  style="position: absolute; width: 200px;"
   data-id="0"
 >
   <li>
@@ -9,7 +9,8 @@
       class="dropdown-item"
       href="#"
       onclick="
-        RustFuncs.delete_sprite(parseInt(
+        hide_sprite_dropdown();
+        RustFuncs.remove_sprite(parseInt(
           this.parentNode.parentNode.getAttribute('data-id')
         ));
       "
@@ -26,3 +27,30 @@
     </ul>
   </li>
 </ul>
+<script>
+const canvas_sprite_dropdown = document.getElementById(
+  "canvas_sprite_dropdown"
+);
+
+function sprite_dropdown(id, x, y) {
+    canvas_sprite_dropdown.setAttribute("data-id", id);
+    canvas_sprite_dropdown.style.left = x + "px";
+    canvas_sprite_dropdown.style.top = y + "px";
+    canvas_sprite_dropdown.classList.add("show");
+    window.addEventListener("mousedown", hide_sprite_dropdown_listener);
+}
+
+function hide_sprite_dropdown_listener(e) {
+    if (
+      e.target != canvas_sprite_dropdown
+      && !canvas_sprite_dropdown.contains(e.target)
+    ) {
+        hide_sprite_dropdown();
+        window.removeEventListener("mousedown", hide_sprite_dropdown_listener);
+    }
+}
+
+function hide_sprite_dropdown() {
+    canvas_sprite_dropdown.classList.remove("show");
+}
+</script>
