replace media IDs with random keys

--- a/web/include/scene/media/media_card.html
+++ b/web/include/scene/media/media_card.html
@@ -4,7 +4,7 @@
       class="card-img-top"
       style="height: 8rem; object-fit: cover;"
       src="${src}"
-      data-id="${id}"
+      data-key="${key}"
       data-title="${title}"
     >
     <div class="card-body">
