start adding facilities to show or hide UI dependent on role

--- a/web/include/special/icon_button.html
+++ b/web/include/special/icon_button.html
@@ -4,6 +4,7 @@
       IFNDEF(OUTLINE) {{ btn-primary }}
       IFDEF(OUTLINE) {{ btn-outline-primary }} 
       IFDEF(SMALL) {{ btn-sm }}
+      IFDEF(CLASSES) {{ {{ CLASSES }} }}
     "
     type="button"
     IFDEF(ID) {{ id="{{ ID }}" }}
