--- a/web/include/scene/menu/menu.html
+++ b/web/include/scene/menu/menu.html
@@ -3,7 +3,7 @@
   {{ scene/menu/layers/layers_list.html }}
 </div>
 <style>
-#canvas_menu .accordion-item {
+#canvas_menu {
     bottom: {{ constant(HOVER_ELEM_INSET) }};
     height: auto;
     position: absolute;
