keep working on sprite menu

--- a/web/include/scene/menu/layers/layer_list_item.html
+++ b/web/include/scene/menu/layers/layer_list_item.html
@@ -2,6 +2,7 @@
   {{
     editable_input(
       value="${label}",
+      button=1,
       feedback=1,
       before=|
       <div class="input-group-text">
