make map size configurable

--- a/web/include/scene/menu/menu.html
+++ b/web/include/scene/menu/menu.html
@@ -1,6 +1,7 @@
 <div class="accordion" id="canvas_menu">
   {{ scene/menu/sprite/sprite_menu.html }}
   {{ scene/menu/layers/layers_list.html }}
+  {{ scene/menu/scene/scene_menu.html }}
 </div>
 <style>
 #canvas_menu {
