--- a/web/include/special/accordion_item.html
+++ b/web/include/special/accordion_item.html
@@ -1,4 +1,4 @@
-<div class="accordion-item">
+<div id="{{ ID }}" class="accordion-item">
   <h2 id="{{ ID }}_heading" class="accordion-header">
     <button
       class="accordion-button collapsed shadow-none"
