fix grid not redrawing on resize

--- a/web/include/scene/menu/scene/scene_menu.html
+++ b/web/include/scene/menu/scene/scene_menu.html
@@ -8,6 +8,7 @@
           id="scene_menu_w",
           label="Width",
           type="number",
+          min=1,
           noend=1,
           small=1,
           action="v => update_scene_details('w', v)"
@@ -18,6 +19,7 @@
           id="scene_menu_h",
           label="Height",
           type="number",
+          min=1,
           nostart=1,
           small=1,
           action="v => update_scene_details('h', v)"
