add tools menu front end

--- a/web/include/scene/menu/menu.html
+++ b/web/include/scene/menu/menu.html
@@ -1,4 +1,5 @@
 <div class="accordion" id="canvas_menu">
+  {{ scene/menu/tools/tools_menu.html }}
   {{ scene/menu/sprite/sprite_menu.html }}
   {{ scene/menu/layers/layers_list.html }}
   {{ scene/menu/scene/scene_menu.html }}
