start working on tools integration with rust

--- a/web/include/scene/menu/layers/layer_list_item.html
+++ b/web/include/scene/menu/layers/layer_list_item.html
@@ -11,6 +11,7 @@
           {{ constant(DATA_ID_ATTR) }}="${id}"
           name="layer_radio"
           type="radio"
+          oninput="RustFuncs.select_layer(${id})"
         >
       </div>
       |,
