--- a/web/include/scene/menu/tools/tools_menu.html
+++ b/web/include/scene/menu/tools/tools_menu.html
@@ -8,19 +8,22 @@
           radio_check(
             group="tool_radio",
             active=1,
-            label='{{ bootstrap_icon(cursor) }}'
+            label='{{ bootstrap_icon(cursor) }}',
+            action="RustFuncs.select_tool('Select')"
           )
         }}
         {{
           radio_check(
             group="tool_radio",
-            label='{{ bootstrap_icon(square) }}'
+            label='{{ bootstrap_icon(square) }}',
+            action="RustFuncs.select_tool('Rectangle')"
           )
         }}
         {{
           radio_check(
             group="tool_radio",
-            label='{{ bootstrap_icon(circle) }}'
+            label='{{ bootstrap_icon(circle) }}',
+            action="RustFuncs.select_tool('Ellipse')"
           )
         }}
       </div>
